css/styles.css
html {
	background-image: url("../imgs/wallhaven-01kd3g.jpg");
  background-size: cover;
  color: #fff;
}

html, body {
  margin: 0;
  padding: 0;
}

.keys {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
}

.key {
  width: 100px;
  height: 100px;
  border: 2px solid #ef0;
  border-radius: 15px;
  text-align: center;
  padding: .5rem;
  margin: 10px;
}

kbd {
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-weight: bolder;
  padding-top: .75rem;
  display: block;
  font-size: 3.5rem;
}

.sound {
  font-size: .8rem;
  text-transform: uppercase;
  letter-spacing: .1rem;
  color: #ef0;
}

